--- a/YT_Results_Counter/manifest.json
+++ b/YT_Results_Counter/manifest.json
@@ -3,7 +3,7 @@
     "version": "1.0.0",
     "description": "Counts search results on youtube",
     "manifest_version": 3,
-    "author": "Sampurna Chapagain",
+    "author": "Zia Gondal",
     "content_scripts": [
         {
           "matches": ["https://*.youtube.com/results*"],
